# some_action

./: pyproject.toml
.github/workflows/: code_quality.yml
some_action/: abstract_base_class.py  copies.py  data_mangling.py  decorators.py  dictionary_tricks.py  exceptions.py  exceptions2.py  functions.py  indenter.py  instance_class_static_methods.py  instance_vs_class.py  iterator_repeater.py  learn_array.py  learning_queue.py  main.py  namedtuples.py  slicing.py  stack.py  tmp_file.py  tuples_and_sets.py
some_action/validations/: main.py  utils.py
tests/: test_context_managers.py  test_some_action.py
