[tool.poetry]
name = "some_action"
version = "0.1.0"
description = ""
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
isort = "^5.9.3"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
